testsuite/tests/properties/invalid_enum_nodes/correct.lkt
import common

class Example: FooNode implements TokenNode {
    @export fun p(): Int = match node.parent {
        case _: OpKind.Foo => 1
        case _ => 0
    }
}
